# dotfiles

./: .Xdefaults  .alacritty.toml  .alacritty.yml  .bash_logout  .bash_profile  .bashrc  .conkyrc  .fonts.conf  .gitconfig  .gitignore  .gvimrc  .inputrc  .muttrc  .profile  .tmux.conf  .vimrc  .xsessionrc  Makefile  cleanup  python_config.bash  sudo_config.bash
.config/: picom.conf
.config/conky/: box.lua  conky.conf  conky.conf.old  conky.old
.config/fastfetch/: config.jsonc
.config/ghostty/: config
.config/ghostty/themes/: CowboyNeal
.config/i3/: config  workspace-1.json
.config/polybar/: config  config.ini  cpu.sh  date.sh  disk.sh  kernelver.sh  launch.bash  load.sh  mailcount.sh  mem.sh  metar.sh  metar2.sh  net.sh  osver.sh
.config/powerline/: colors.json
.config/sc-im/: scimrc
.fluxbox/: apps  init  keys  menu  overlay  slitlist
.fvwm/: FvwmScript-ConfirmQuit  VolumeLevel  config  local.config  modules.config  theme.config
.fvwm-openbsd/: config.diff  modules.config.diff
.fvwm/images/: dockappmask.xpm  dockmask2.xpm  dockmask3.xpm  dockmask4.xpm  iconmanpagermask.xpm
.fvwm/modules/: FvwmTransFocus.c  compile.sh
.themes/Flat-Remix-GTK-SUPERBLUE-Darkest/: index.theme
.urxvt/ext/: clipboard
.vim/: .VimballRecord
.vim/colors/: cowboyfox.vim  cowboyneal.vim  paterscheme.vim
GNUstep/Defaults/: GNUMail.plist  GWorkspace.plist  WMGLOBAL  WMMail  WMRootMenu  WMState.zL3x6o  WMWindowAttributes  WindowMaker  WindowMaker.bak
powerline-status-histcmd/: pyproject.toml  setup.py
powerline-status-histcmd/powerline-status-histcmd/: custom.py
(+68 files in other folders)
